# rpg_quadrotor_control

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  dependencies.yaml
bridges/ctrl_bridge/: CMakeLists.txt  package.xml
bridges/ctrl_bridge/include/ctrl_bridge/: ctrl_bridge.hpp  msg_encoding.hpp  msgs_defs.hpp  serial.hpp
bridges/ctrl_bridge/launch/: ctrl_bridge.launch
bridges/ctrl_bridge/parameters/: default.yaml
bridges/ctrl_bridge/src/: ctrl_bridge.cpp  ctrl_bridge_node.cpp  msg_encoding.cpp  serial.cpp
bridges/laird_bridge/: CMakeLists.txt  README.md  nodelet_plugins.xml
bridges/laird_bridge/include/laird_bridge/: laird_bridge.h  parameter_handler.h  serial_port.h
bridges/laird_bridge/launch/: laird_bridge.launch  laird_bridge_with_sync.launch
bridges/laird_bridge/parameters/: default.yaml  u3timesync.yaml  xu4timesync.yaml
bridges/laird_bridge/src/: laird_bridge.cpp  laird_bridge_node.cpp  laird_bridge_nodelet.cpp  laird_timesync_node.cpp  parameter_handler.cpp  serial_port.cpp
bridges/sbus_bridge/: CMakeLists.txt  package.xml
bridges/sbus_bridge/fc_settings/: betaflight_4.2.0-BRAIN-1_RADIX-Team Black Sheep.hex  lumenier_f4_aio_betaflight-v3.2.5_rpg_race_quad.txt  lumenier_f4_aio_betaflight_loadcell.txt  lumenier_f4_aio_betaflight_rpg.txt  lumenier_f4_aio_betaflight_rpg_race_quad.txt  radix_f4_aio_betaflight_rpg.txt
bridges/sbus_bridge/include/sbus_bridge/: channel_mapping.h  sbus_bridge.h  sbus_msg.h  sbus_serial_port.h  serial_port.h  thrust_mapping.h
bridges/sbus_bridge/launch/: sbus_bridge.launch
bridges/sbus_bridge/msg/: SbusRosMessage.msg
bridges/sbus_bridge/parameters/: bobby.yaml  default.yaml  event_avoidance.yaml  hawk.yaml  iros_drone.yaml  race_quad.yaml  waterbug.yaml
bridges/sbus_bridge/src/: sbus_bridge.cpp  sbus_bridge_node.cpp  sbus_msg.cpp  sbus_serial_port.cpp  serial_port.cpp  thrust_mapping.cpp
control/autopilot/: CMakeLists.txt  package.xml
control/autopilot/include/autopilot/: autopilot.h  autopilot_helper.h  autopilot_inl.h  autopilot_states.h  controller_with_primitives.h  copilot.h  copilot_helper.h  states.h  (+1 more)
control/autopilot/parameters/: default.yaml  fpv.yaml
control/autopilot/src/: autopilot.cpp  autopilot_helper.cpp  autopilot_node.cpp  controller_with_primitives.cpp  copilot.cpp  copilot_helper.cpp
control/position_controller/: CMakeLists.txt  package.xml
control/position_controller/parameters/: default.yaml  fpv.yaml  waterbug.yaml
control/position_controller/src/: position_controller.cpp
control/state_predictor/: CMakeLists.txt  package.xml
control/state_predictor/parameters/: ardrone.yaml  fpv.yaml  hummingbird.yaml
control/state_predictor/src/: quad_ext_state_estimate.cpp  state_predictor.cpp
gui/rqt_quad_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
gui/rqt_quad_gui/resource/: autopilot_widget.ui  quad_name_widget.ui
gui/rqt_quad_gui/scripts/: rqt_quad_gui
quad_launch_files/: CMakeLists.txt  package.xml
quad_launch_files/launch/: base_computer_example.launch  iros_drone.launch  real_quad_example.launch
quadrotor_common/: CMakeLists.txt  package.xml
quadrotor_common/include/quadrotor_common/: control_command.h  geometry_eigen_conversions.h  math_common.h  parameter_helper.h  quad_desired_state.h  quad_state_estimate.h  quaternion_functions.h  trajectory_point.h
quadrotor_common/matlab/: eulerAngles2RotMatrix.m  quat2RotMatrix.m  quatMultiplication.m  rotMatrix2EulerAngles.m  test_code.m  unskew.m
quadrotor_common/src/: control_command.cpp  geometry_eigen_conversions.cpp  math_common.cpp  parameter_helper.cpp  quad_desired_state.cpp  quad_state_estimate.cpp  quaternion_functions.cpp  trajectory_point.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/msg/: AutopilotFeedback.msg  ControlCommand.msg  CopilotFeedback.msg  LowLevelFeedback.msg  QuadDesiredState.msg  Trajectory.msg  TrajectoryPoint.msg
simulation/rpg_rotors_interface/: CMakeLists.txt  package.xml
simulation/rpg_rotors_interface/launch/: quadrotor_empty_world.launch  quadrotor_empty_world_no_controller.launch  quadrotor_rgb_world_no_controller.launch
simulation/rpg_rotors_interface/parameters/: autopilot.yaml  copilot.yaml  joypad_flying.yaml  large_angle_controller.yaml  manual_flight_assistant.yaml  position_controller.yaml  rpg_rotors_interface.yaml
simulation/rpg_rotors_interface/src/: rpg_rotors_interface.cpp
simulation/rpg_rotors_interface/vehicles/: hummingbird_downlooking_camera.gazebo  hummingbird_downlooking_color_camera.gazebo  hummingbird_frontlooking_camera.gazebo  hummingbird_frontlooking_color_camera.gazebo  hummingbird_stereo_camera .gazebo
test/rpg_quadrotor_integration_test/: CMakeLists.txt  package.xml
test/rpg_quadrotor_integration_test/launch/: rpg_quadrotor_integration_test.launch
test/rpg_quadrotor_integration_test/src/: rpg_quadrotor_integration_test.cpp
trajectory_planning/polynomial_trajectories/: CMakeLists.txt  package.xml
trajectory_planning/polynomial_trajectories/src/: constrained_polynomial_trajectories.cpp  minimum_snap_trajectories.cpp  polynomial_trajectories_common.cpp  polynomial_trajectory.cpp
trajectory_planning/trajectory_generation_helper/: CMakeLists.txt  package.xml
trajectory_planning/trajectory_generation_helper/src/: acrobatic_sequence.cpp  circle_trajectory_helper.cpp  flip_trajectory_helper.cpp  heading_trajectory_helper.cpp  polynomial_trajectory_helper.cpp
trajectory_planning/trajectory_generation_helper/tests/: heading_test.cpp
utils/manual_flight_assistant/: CMakeLists.txt  package.xml
utils/manual_flight_assistant/launch/: manual_flight_assistant.launch
utils/manual_flight_assistant/parameters/: default.yaml
utils/manual_flight_assistant/src/: manual_flight_assistant.cpp
utils/trajectory_visualizer/: CMakeLists.txt  package.xml
utils/trajectory_visualizer/src/: trajectory_visualizer.cpp
utils/vbat_thrust_calibration/: CMakeLists.txt  package.xml
utils/vbat_thrust_calibration/launch/: vbat_thrust_calibration.launch
utils/vbat_thrust_calibration/scripts/: vbat_thrust_calibration.py
(+112 files in other folders)
