<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_common</name>
  <version>0.0.0</version>
  <description>The quadrotor_common package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>TODO</license>

  <author>Matthias Faessler</author>
  <author>Flavio Fontana</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>

  <export>

  </export>
</package>
