<?xml version="1.0"?>
<package format="2">
	<name>ctrl_bridge</name>
	<version>0.0.0</version>
	<description>The RPG controller bridge package</description>
	
	<maintainer email="foehn@ifi.uzh.ch">Philipp Foehn</maintainer>
	<license>GNU GPL</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>
	
	<depend>roscpp</depend>
	<depend>eigen_catkin</depend>
	<depend>quad_common</depend>
	<depend>quad_msgs</depend>
	<depend>geometry_msgs</depend>
	
</package>
