<?xml version="1.0"?>
<package format="2">
  <name>sbus_bridge</name>
  <version>0.0.0</version>
  <description>The sbus_bridge package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>TODO</license>

  <author>Matthias Faessler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>quad_common</depend>
  <depend>quad_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    
  </export>
</package>
