<?xml version="1.0"?>
<package format="2">
  <name>autopilot</name>
  <version>0.0.0</version>
  <description>The autopilot package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>MIT</license>

  <author>Matthias Faessler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>position_controller</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>state_predictor</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_generation_helper</depend>

  <export>
    
  </export>
</package>
