<?xml version="1.0"?>
<package format="2">
  <name>state_predictor</name>
  <version>0.0.0</version>
  <description>The state_predictor package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>TODO</license>

  <author>Matthias Faessler</author>
  <author>Flavio Fontana</author>
  <author>Davide Falanga</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>quadrotor_common</depend>
  <depend>roscpp</depend>

  <export>
    
  </export>
</package>
