<?xml version="1.0"?>
<package format="2">
  <name>polynomial_trajectories</name>
  <version>0.0.0</version>
  <description>The polynomial_trajectories package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>MIT</license>

  <author>Matthias Faessler</author>
  <author>Flavio Fontana</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  
  <export>

  </export>
</package>
