<?xml version="1.0"?>
<package format="2">
  <name>trajectory_visualizer</name>
  <version>0.0.0</version>
  <description>The trajectory_visualizer package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>TODO</license>

  <author>Matthias Faessler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

  <export>
    
  </export>
</package>
